# anna_aaron_wedding

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  RSVP.md  fly.toml
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml
crates/frontend/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js  tailwind.css
crates/frontend/src/: app.rs  lib.rs
crates/frontend/src/api/: client.rs
crates/frontend/src/components/: footer.rs  mod.rs  nav.rs  spinner.rs
crates/frontend/src/pages/: gallery.rs  home.rs  hotel.rs  itinerary.rs  mod.rs  rsvp.rs  seating.rs
crates/server/: Cargo.toml
crates/server/.sqlx/: query-496cdf1aaf4b2553b1e794016e045eddaf2d630833e6c9e02354cc3da7a49460.json  query-55453312b4978e9266770bbed2f150d41d9a89d75405a8b15e675269273a9191.json  query-6292b29db09f2827bfb73835eb0720fda0427379adbcb1c637fb76f58f08d207.json  query-67e99bd2d3f87020ca7767acc28b725536c3c3146676fba4eb72c03905fc151c.json  query-6f2d0ea314fcba75989dd6adadf9176f48b26896799e8b79f6e5f3618076fab4.json  query-7226731d204821efdbd93caf7fb17a06d9c6fb57b5a38b195c290b3414b1163e.json  query-74102238036d25fdff3f61bffb496e61c801236b9703cca6b04c59fd4cdd29fa.json  query-76e8f5158e8b6f6381186d11e7ca7d35f1638255bcc845e0d1a14bebade3cb5b.json  query-8523df54b791e8a96f02e4e8495716a95e1531caa5c9c8767199431409014183.json  query-a4bd38ca5b8856544dc8085b96f34dfd3a4a6466fd9232d208fff0157a1163ae.json  query-a8a2c3396c5c77817b42259037df907e91eefba3cfda61feb92546c837c16f7f.json  query-c0de134c8def2c11e41c3c3c9909b17d2be13566dd92e5dc3e070648ca2006cd.json  query-c0f937f3b712d70fe124431a004cc77bc788b339516fee48215c2125b218b3b6.json  query-dc66b3f26cbeb308bd47c78fd797945798dc265e986503dc4943835089ff38fc.json  query-ded8624266fcd8d809861c1e2ce3c88914e54c55f5f17ee3af97cbd114db1bed.json
crates/server/migrations/: 20250101000001_create_guests.sql  20250101000002_create_rsvp.sql  20250101000003_create_tables.sql  20250101000004_create_hotel_rooms.sql  20250101000005_create_photos.sql  20250101000006_rsvp_redesign.sql
crates/server/src/: config.rs  db.rs  error.rs  mail.rs  main.rs  state.rs
crates/server/src/handlers/: guests.rs  hotels.rs  mod.rs  photos.rs  rsvp.rs  tables.rs
crates/shared/: Cargo.toml
crates/shared/src/api/: routes.rs
crates/shared/src/models/: guest.rs  hotel.rs  mod.rs  photo.rs  rsvp.rs  table.rs
scripts/: import_guests.py  purge_guests.py  pyproject.toml  seed_test_guests.py
