[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/server",
    "crates/frontend",
]
# Note: `cargo build/test/clippy` targets native by default.
# Always use `--exclude frontend` for native commands — the frontend crate
# requires wasm32-unknown-unknown and will not compile for native targets.

[workspace.dependencies]
# --- Async runtime ---
tokio = { version = "1", features = ["full"] }

# --- Web framework ---
axum = { version = "0.8" }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["fs", "compression-gzip", "trace", "cors"] }

# --- Database ---
sqlx = { version = "0.8", features = [
    "sqlite",
    "runtime-tokio",
    "macros",
    "migrate",
] }

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Leptos (frontend only, version pinned here) ---
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }

# --- WASM utilities ---
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "HtmlDivElement",
    "console",
    "AbortController",
    "AbortSignal",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
] }
serde-wasm-bindgen = "0.6"

# --- Logging ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"

# --- Utilities ---
anyhow = "1"
thiserror = "2"
# "js" enables browser crypto.getRandomValues() for UUID v4 generation on WASM.
# It is a no-op on native targets.
uuid = { version = "1", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder"], default-features = false }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# WASM-specific release profile: optimize for binary size
[profile.wasm-release]
inherits = "release"
opt-level = "z"
panic = "abort"
