[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# This crate ONLY compiles to wasm32-unknown-unknown.
# Never add native-only deps (tokio, sqlx, axum, etc.).
# All cargo native commands use --exclude frontend.

[lib]
# cdylib: produces the .wasm binary that Trunk packages.
# rlib:   allows `cargo check --target wasm32-unknown-unknown` for type-checking in CI.
crate-type = ["cdylib", "rlib"]

[dependencies]
shared = { path = "../shared" }

leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }

wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
serde-wasm-bindgen = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

log = { workspace = true }
console_log = { workspace = true }
console_error_panic_hook = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
